deploy: 58fff1c404f7b0974bd1279dcd8306dbc7acb8e0

--- a/print.html
+++ b/print.html
@@ -386,7 +386,7 @@ SwiftWasm Foundation:</p>
 <li><code>Port</code></li>
 <li><code>PortMessage</code></li>
 <li><code>Process</code></li>
-<li><code>ProcessInfo</code>'s <code>processName</code>, <code>userName</code>, and <code>fullUserName</code></li>
+<li><code>ProcessInfo</code> (Partially available since 5.7)</li>
 <li><code>PropertyListEncoder</code></li>
 <li><code>RunLoop</code></li>
 <li><code>Stream</code></li>
