--- a/print.html
+++ b/print.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Using Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/porting.html"><strong aria-hidden="true">2.4.</strong> Porting code from other platforms</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.5.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.6.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/testing.html"><strong aria-hidden="true">2.7.</strong> Testing your app</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.2.</strong> Tips</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Introduction</a></li><li class="chapter-item expanded "><a href="getting-started/index.html"><strong aria-hidden="true">2.</strong> Getting Started</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="getting-started/setup.html"><strong aria-hidden="true">2.1.</strong> Setup</a></li><li class="chapter-item expanded "><a href="getting-started/hello-world.html"><strong aria-hidden="true">2.2.</strong> Hello, World</a></li><li class="chapter-item expanded "><a href="getting-started/swift-package.html"><strong aria-hidden="true">2.3.</strong> Using Swift Package Manager</a></li><li class="chapter-item expanded "><a href="getting-started/porting.html"><strong aria-hidden="true">2.4.</strong> Porting code from other platforms</a></li><li class="chapter-item expanded "><a href="getting-started/browser-app.html"><strong aria-hidden="true">2.5.</strong> Creating a browser app</a></li><li class="chapter-item expanded "><a href="getting-started/javascript-interop.html"><strong aria-hidden="true">2.6.</strong> JavaScript interoperation</a></li><li class="chapter-item expanded "><a href="getting-started/testing.html"><strong aria-hidden="true">2.7.</strong> Testing your app</a></li><li class="chapter-item expanded "><a href="getting-started/debugging.html"><strong aria-hidden="true">2.8.</strong> Debugging</a></li></ol></li><li class="chapter-item expanded "><a href="examples/index.html"><strong aria-hidden="true">3.</strong> Examples</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="examples/importing-function.html"><strong aria-hidden="true">3.1.</strong> Importing function</a></li><li class="chapter-item expanded "><a href="examples/exporting-function.html"><strong aria-hidden="true">3.2.</strong> Exporting function</a></li><li class="chapter-item expanded "><a href="examples/example-projects.html"><strong aria-hidden="true">3.3.</strong> Example projects</a></li></ol></li><li class="chapter-item expanded "><a href="contribution-guide/index.html"><strong aria-hidden="true">4.</strong> Contribution Guide</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="contribution-guide/how-to-build-toolchain.html"><strong aria-hidden="true">4.1.</strong> How to build the toolchain</a></li><li class="chapter-item expanded "><a href="contribution-guide/tips.html"><strong aria-hidden="true">4.2.</strong> Tips</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -545,6 +545,29 @@ using <code>SwiftPM</code>. After your tests are built, you can use a WASI-compa
 <p>As you can see, the produced test binary starts with the name of your package followed by
 <code>PackageTests.xctest</code>. It is located in the <code>.build/debug</code> subdirectory, or in the <code>.build/release</code>
 subdirectory when you build in release mode.</p>
+<h1><a class="header" href="#debugging" id="debugging">Debugging</a></h1>
+<p>Debugging is one of the most important parts of application development. This section describes debugging tools compatible with SwiftWasm.</p>
+<p>These tools are DWARF-based, so you need to build your application with DWARF sections enabled.
+If you are using <code>carton bundle</code>, you can use the <code>--debug-info</code> flag to enable debugging with optimized application.
+If you are using <code>swift build</code>, it is enabled by default.</p>
+<h2><a class="header" href="#chrome-devtools" id="chrome-devtools">Chrome DevTools</a></h2>
+<p>When you are debugging a web browser application, Chrome DevTools is a good tool to use. It allows you to
+put breakpoints, step through at Swift source code level.</p>
+<p>Please follow the steps below to configure Chrome DevTools for SwiftWasm:</p>
+<ol>
+<li>Install <a href="https://goo.gle/wasm-debugging-extension"><code>C/C++ DevTools Support (DWARF)</code></a> extension in your Chrome</li>
+<li>Enable <code>WebAssembly Debugging: Enable DWARF support</code> in <code>Experiments</code> pane of DevTools settings</li>
+</ol>
+<p>See <a href="https://developer.chrome.com/blog/wasm-debugging-2020">the DevTools team's official introduction</a> for more details about the extension.</p>
+<p><img src="getting-started/./chrome-devtools.png" alt="" /></p>
+<p>Note that the function names in the stack trace are mangled. You can demangle them using <code>swift demangle</code> command.</p>
+<p>Unfortunately, variable inspection is unavailable since Swift depends on its own mechanisms to do that instead of DWARF's structure type feature. (See <a href="https://github.com/swiftwasm/swift/issues/593">this thread</a> for more details)</p>
+<h2><a class="header" href="#a-hrefhttpsgithubcomkateinoigakukunwasminspectwasminspecta" id="a-hrefhttpsgithubcomkateinoigakukunwasminspectwasminspecta"><a href="https://github.com/kateinoigakukun/wasminspect">wasminspect</a></a></h2>
+<p><a href="https://github.com/kateinoigakukun/wasminspect">wasminspect</a>
+can help in the investigation if the debugged binary does not rely on integration with JavaScript.
+We recommend splitting your packages into separate executable targets, most of which shouldn't 
+assume the availability of JavaScript to make debugging easier.</p>
+<p><img src="https://raw.githubusercontent.com/kateinoigakukun/wasminspect/master/assets/demo.gif" alt="demo" /></p>
 <h1><a class="header" href="#examples" id="examples">Examples</a></h1>
 <p>This section shows you example usage of our toolchain.</p>
 <h1><a class="header" href="#importing-a-function-from-host-environments" id="importing-a-function-from-host-environments">Importing a function from host environments</a></h1>
@@ -764,12 +787,6 @@ $ ./utils/build-script \
 <li><a href="https://github.com/mozilla/sccache">mozilla/sccache</a></li>
 <li><a href="https://github.com/apple/swift/blob/master/docs/DevelopmentTips.md#use-sccache-to-cache-build-artifacts">Use sccache to cache build artifacts</a></li>
 </ul>
-<h2><a class="header" href="#debugging" id="debugging">Debugging</a></h2>
-<p>When you want to debug a WebAssembly binary, <a href="https://github.com/kateinoigakukun/wasminspect">wasminspect</a> 
-can help in the investigation if the debugged binary does not rely on integration with JavaScript.
-We recommend splitting your packages into separate executable targets, most of which shouldn't 
-assume the availability of JavaScript to make debugging easier.</p>
-<p><img src="https://raw.githubusercontent.com/kateinoigakukun/wasminspect/master/assets/demo.gif" alt="demo" /></p>
 
                     </main>
 
