deploy: 96d60d1b4fa75887768dcb08adc52c37db506c9d

--- a/examples/exporting-function.html
+++ b/examples/exporting-function.html
@@ -178,7 +178,7 @@ The default execution model is <em>command</em>, so you need to pass <code>-mexe
     -target wasm32-unknown-wasi \
     lib.swift -o lib.wasm \
     -Xlinker --export=add \
-    -Xswiftc -Xclang-linker -Xswiftc -mexec-model=reactor \
+    -Xclang-linker -mexec-model=reactor \
     -Xlinker --export=main # Optional
 </code></pre>
 <p>Then, you can use the exported function from host environment.</p>
